# pty-exec

./: Cargo.toml  README.md
examples/xterm/: package.json
examples/xterm/src-tauri/: Cargo.toml  tauri.conf.json
src/: error.rs  lib.rs  pty.rs
src/unix/: mod.rs  pty.rs  shell.rs  window.rs
